[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
rand = "0.8.5"
hkdf = "0.11.0"
sha2 = "0.9"
sha3 = "0.9"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
ff = { version = "0.13", default-features = false }

[dev-dependencies]
fluid = "0.4"
hex = "0.4"
serde_json = "1.0"
rand_chacha = "0.3.1"
rand_core = "0.6"

[toolchain]
channel = "nightly"
